Revision history for {{$dist->name}}

{{$NEXT}}

3.001     2021-06-21 08:19:28+08:00 Asia/Kuala_Lumpur
    [New features]
    - Ryu::Observable has aliases for ->as_numeric, ->as_number and ->set_numeric, ->set_number
    - Sentinel support for Ryu::Observable via ->lvalue_str and ->lvalue_num

3.000     2021-05-01 19:58:23+08:00 Asia/Kuala_Lumpur
    [New features]
    - ->next support

    [Bugs fixed]
    - the ->completed and ->unblocked methods now return uncancellable Futures, so that
    they can be used with constructs such as Future->wait_any(timeout, $src->unblocked)
    without affecting internal state

2.009     2021-04-13 13:32:36+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->unblocked could fail due to bypassing the default when attempting to use the Future factory

2.008     2021-04-05 12:20:04+08:00 Asia/Kuala_Lumpur
    New features:

    - ->emit_from joins multiple sources into the current source

2.007     2021-01-25 02:01:08+08:00 Asia/Kuala_Lumpur
    New features:

    - the `->source` provided by a Ryu::Sink is now a child of the sink itself,
    to facilitate backpressure algorithms and help with common streaming configurations

    Bugs fixed:

    - ->ordered_futures would call ->pause or ->resume more often than required,
    these are now only triggered when they would change state

2.006     2021-01-17 03:02:18+08:00 Asia/Kuala_Lumpur
    New features:

    - ->ordered_futures (->resolve) now also takes low/high parameters for backpressure

    Bugs fixed:

    - original source failure propagates after any pending Future instances are resolved,
    thanks to Amin Marashi (Github issue #8)

2.005     2021-01-17 02:16:18+08:00 Asia/Kuala_Lumpur
    New features:

    - ->as_buffer can take low/high parameters similar to ->buffer, providing backpressure
    for buffer streams.

    Bugs fixed:

    - small amount of extra protection on Ryu::Observable->notify_all, which was